--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,7 @@
 .buttons {
     display: flex;
     position: relative;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
 }
 
 .buttons .navigation-button {
