--- a/styles/register.css
+++ b/styles/register.css
@@ -13,6 +13,20 @@
     padding: 10px;
 }
 
+.section-element .section-title {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    border-bottom: 1px solid black;
+    font-size: 16px;
+    text-align: center;
+    color: rgb(235, 235, 134);
+    background-color: rgb(2, 2, 60);
+    padding: 5px;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
 .section-element * {
     margin: 2px;
 }
