--- a/styles/login.css
+++ b/styles/login.css
@@ -6,7 +6,7 @@
     border: 1px solid black;
     background-color: lightgray;
     margin: auto;
-    width: 500px;
+    width: 350px;
     padding-bottom: 5px;
     font-size: 15px;
 }
@@ -35,4 +35,5 @@
     grid-column-end: 3;
     margin: auto;
     margin-top: 5px;
+    margin-bottom: 5px;
 }
